--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@mui/icons-material": "^5.11.11",
-    "@mui/material": "^5.11.12",
-    "@reduxjs/toolkit": "^1.9.3",
+    "@mui/icons-material": "^5.2.6",
+    "@mui/material": "^5.2.6", 
+    "@reduxjs/toolkit": "^1.7.1", 
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "date-fns": "^2.30.0",
-    "react": "16.8",
-    "react-dom": "16.8",
-    "react-is": "16.8",
+    "react": "^18.2.0", 
+    "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
     "react-phone-number-input": "^3.2.23",
     "react-redux": "^8.0.5",
     "react-router": "^6.9.0",
@@ -23,7 +23,7 @@
     "react-scripts": "5.0.1",
     "react-stripe-checkout": "^2.6.3",
     "redux-persist": "^6.0.0",
-    "styled-components": "^5.0.0",
+    "styled-components": "^5.3.3", 
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -56,6 +56,7 @@
   "author": "",
   "license": "ISC"
 }
+
 
 
 
